# adk-translate

./: .env.example  .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml  translate.py
adk_traductor/: __init__.py  adk_translate.py  cli.py  copilot_model.py  copilot_translate.py  pipeline.py
adk_traductor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adk_traductor/md/: __init__.py  comments.py  protect.py  segmenter.py
examples/: sample.md
tests/: test_basic.py  test_integration.py
